[gd_scene load_steps=8 format=2]

[ext_resource path="res://Conteudo-BIBLIOTECA.png" type="Texture" id=1]
[ext_resource path="res://ConteudoBiblioteca.gd" type="Script" id=2]
[ext_resource path="res://font/Symtext.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 70
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 45
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 45
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]

[node name="ConteudoBiblioteca" type="Sprite" parent="."]
position = Vector2( 321, 179.5 )
scale = Vector2( 0.338542, 0.332407 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MatematicaFinanceira" type="Button" parent="ConteudoBiblioteca"]
margin_left = -266.0
margin_top = -522.0
margin_right = 493.0
margin_bottom = -362.0
custom_fonts/font = SubResource( 1 )
text = "Matematica Financeira"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gastos" type="Button" parent="ConteudoBiblioteca"]
margin_left = -493.0
margin_top = -236.0
margin_right = 496.0
margin_bottom = -32.0
custom_fonts/font = SubResource( 2 )
text = "Gastos"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inflacao" type="Button" parent="ConteudoBiblioteca"]
margin_left = -502.0
margin_top = 56.0
margin_right = 502.0
margin_bottom = 263.0
custom_fonts/font = SubResource( 3 )
text = "        planejamento financeiro"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="investimentos" type="Button" parent="ConteudoBiblioteca"]
margin_left = -499.0
margin_top = 341.0
margin_right = 508.0
margin_bottom = 537.0
custom_fonts/font = SubResource( 4 )
text = "      tipos de investimentos"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ConteudoBiblioteca/MatematicaFinanceira" to="ConteudoBiblioteca" method="_on_MatematicaFinanceira_pressed"]
[connection signal="pressed" from="ConteudoBiblioteca/gastos" to="ConteudoBiblioteca" method="_on_gastos_pressed"]
[connection signal="pressed" from="ConteudoBiblioteca/inflacao" to="ConteudoBiblioteca" method="_on_inflacao_pressed"]
[connection signal="pressed" from="ConteudoBiblioteca/investimentos" to="ConteudoBiblioteca" method="_on_investimentos_pressed"]
